Archive2/89/8d116c91741c64/output
main.cpp:7:25: error: _Pragma takes a parenthesized string literal
 PRAGMA("diagnostic push")
                         ^
main.cpp:8:43: error: _Pragma takes a parenthesized string literal
 PRAGMA("diagnostic ignored \"-Wwhatever\"")
                                           ^
main.cpp:10:24: error: _Pragma takes a parenthesized string literal
 PRAGMA("diagnostic pop")
                        ^
main.cpp:4:19: error: '_Pragma' does not name a type
 #define PRAGMA(x) _Pragma ("GCC "x)
                   ^
main.cpp:7:1: note: in expansion of macro 'PRAGMA'
 PRAGMA("diagnostic push")
 ^
