Archive2/89/8d116c91741c64/main.cpp
#if defined(__clang__)
#define PRAGMA(x) _Pragma ("clang "x)
#elif defined (__GNUC__)
#define PRAGMA(x) _Pragma ("GCC "x)
#endif

PRAGMA("diagnostic push")
PRAGMA("diagnostic ignored \"-Wwhatever\"")
// some code here
PRAGMA("diagnostic pop")